@@ -20,11 +20,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04, macos-13]
-        include:
-          - use_qt6: On
-          - os: ubuntu-20.04
-            use_qt6: Off
+        os: [ubuntu-22.04, macos-13]
       fail-fast: false # Prefer quick result
 
     runs-on: ${{ matrix.os }}
@@ -44,13 +40,7 @@ jobs:
           key: ${{ github.workflow }}-${{ github.job }}-${{ matrix.os }}
 
       - name: Install missing software on ubuntu
-        if: contains(matrix.os, 'ubuntu') && matrix.use_qt6 == 'Off'
-        run: |
-          sudo apt-get update
-          sudo apt-get install libxml2-utils libtinyxml2-dev qtbase5-dev qttools5-dev libqt5charts5-dev qtchooser
-
-      - name: Install missing software on ubuntu
-        if: contains(matrix.os, 'ubuntu') && matrix.use_qt6 == 'On'
+        if: contains(matrix.os, 'ubuntu')
         run: |
           sudo apt-get update
           sudo apt-get install libxml2-utils libtinyxml2-dev
@@ -68,7 +58,7 @@ jobs:
       - name: CMake build on ubuntu (with GUI / system tinyxml2)
         if: contains(matrix.os, 'ubuntu')
         run: |
-          cmake -S . -B cmake.output.tinyxml2 -G "Unix Makefiles" -DHAVE_RULES=On -DBUILD_TESTS=On -DBUILD_GUI=On -DUSE_QT6=${{ matrix.use_qt6 }} -DWITH_QCHART=On -DBUILD_TRIAGE=On -DUSE_BUNDLED_TINYXML2=Off -DCMAKE_DISABLE_PRECOMPILE_HEADERS=On -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
+          cmake -S . -B cmake.output.tinyxml2 -G "Unix Makefiles" -DHAVE_RULES=On -DBUILD_TESTS=On -DBUILD_GUI=On -DUSE_QT6=On -DWITH_QCHART=On -DBUILD_TRIAGE=On -DUSE_BUNDLED_TINYXML2=Off -DCMAKE_DISABLE_PRECOMPILE_HEADERS=On -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
           cmake --build cmake.output.tinyxml2 -- -j$(nproc)
 
       - name: CMake build on macos (with GUI / system tinyxml2)
@@ -85,11 +75,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04, macos-13]
-        include:
-          - use_qt6: On
-          - os: ubuntu-20.04
-            use_qt6: Off
+        os: [ubuntu-22.04, macos-13]
       fail-fast: false # Prefer quick result
 
     runs-on: ${{ matrix.os }}
@@ -108,12 +94,6 @@ jobs:
         with:
           key: ${{ github.workflow }}-${{ github.job }}-${{ matrix.os }}
 
-      - name: Install missing software on ubuntu
-        if: contains(matrix.os, 'ubuntu') && matrix.use_qt6 == 'Off'
-        run: |
-          sudo apt-get update
-          sudo apt-get install libxml2-utils qtbase5-dev qttools5-dev libqt5charts5-dev qtchooser
-
       # TODO: move latest compiler to separate step
       # TODO: bail out on warnings with latest GCC
       - name: Set up GCC
@@ -129,7 +109,7 @@ jobs:
           echo "CXX=g++-13" >> $GITHUB_ENV
 
       - name: Install missing software on ubuntu
-        if: contains(matrix.os, 'ubuntu') && matrix.use_qt6 == 'On'
+        if: contains(matrix.os, 'ubuntu')
         run: |
           sudo apt-get update
           sudo apt-get install libxml2-utils
@@ -147,7 +127,7 @@ jobs:
       - name: Run CMake on ubuntu (with GUI)
         if: contains(matrix.os, 'ubuntu')
         run: |
-          cmake -S . -B cmake.output -G "Unix Makefiles" -DHAVE_RULES=On -DBUILD_TESTS=On -DBUILD_GUI=On -DUSE_QT6=${{ matrix.use_qt6 }} -DWITH_QCHART=On -DBUILD_TRIAGE=On -DCMAKE_DISABLE_PRECOMPILE_HEADERS=On -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_INSTALL_PREFIX=cppcheck-cmake-install
+          cmake -S . -B cmake.output -G "Unix Makefiles" -DHAVE_RULES=On -DBUILD_TESTS=On -DBUILD_GUI=On -DUSE_QT6=On -DWITH_QCHART=On -DBUILD_TRIAGE=On -DCMAKE_DISABLE_PRECOMPILE_HEADERS=On -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_INSTALL_PREFIX=cppcheck-cmake-install
 
       - name: Run CMake on macos (with GUI)
         if: contains(matrix.os, 'macos')
@@ -175,7 +155,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04, macos-13]
+        os: [ubuntu-22.04, macos-13]
       fail-fast: false # Prefer quick result
 
     runs-on: ${{ matrix.os }}
@@ -209,7 +189,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04, macos-13]
+        os: [ubuntu-22.04, macos-13]
       fail-fast: false # Prefer quick result
 
     runs-on: ${{ matrix.os }}
@@ -243,7 +223,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04, macos-13]
+        os: [ubuntu-22.04, macos-13]
       fail-fast: false # Prefer quick result
 
     runs-on: ${{ matrix.os }}
@@ -267,7 +247,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04, macos-13]
+        os: [ubuntu-22.04, macos-13]
         include:
           - xdist_n: auto
           # FIXME: test_color_tty fails with xdist
